Sistema de latidos
Agregado sistema de control de latidos del jugador, con funciones para incrementar y decrementar este valor

--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -919,11 +919,46 @@ Generic.Surface Properties=True
 LightmassPrimitiveSettingsObject.Lightmass=True
 FloatProperty.Variable=True
 FloatProperty.DefaultValueCategory=True
+MediaSoundComponent.Variable=True
+MediaSoundComponent.TransformCommon=True
+MediaSoundComponent.Sockets=True
+MediaSoundComponent.AttenuationDistance=True
+MediaSoundComponent.UMediaSoundComponent=True
+MediaSoundComponent.AttenuationSpatialization=True
+MediaSoundComponent.Media=True
+MediaSoundComponent.Attenuation=True
+MediaSoundComponent.AttenuationAirAbsorption=True
+MediaSoundComponent.AttenuationListenerFocus=True
+MediaSoundComponent.Concurrency=True
+MediaSoundComponent.SoundClass=True
+MediaSoundComponent.AttenuationOcclusion=True
+MediaSoundComponent.Effects=True
+MediaSoundComponent.Sound=True
+MediaSoundComponent.Tags=True
+MediaSoundComponent.ComponentReplication=True
+MediaSoundComponent.Activation=True
+MediaSoundComponent.Cooking=True
+MediaSoundComponent.Events=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/FirstPersonHUD.FirstPersonHUD
+OpenAssetsAtExit=/Game/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [RootWindow]
 ScreenPosition=X=215.000 Y=16.000
@@ -1629,8 +1664,8 @@ SpotLightComponent="\"Object.Light.LightColor\" "
 PointLightComponent="\"Object.Light.LightColor\" "
 LightComponent="\"Object.Light.LightColor\" "
 LightComponentBase="\"Object.Light.LightColor\" "
-SceneComponent="\"Object.Light.LightColor\" "
-ActorComponent="\"Object.Light.LightColor\" "
+SceneComponent=
+ActorComponent=
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule=
