Sistema de latidos con el Mosntruo
Añadido al sistema de latidos un control de que cuando vemos al mosntruo, el corazon se acelera en funcion de la distancia del monstruo.
Falta que el monstruo, cuando muera, desactive el bool "monsterDetected" del player

--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -954,9 +954,15 @@ K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+Monster_C.Tick=True
+Monster_C.Replication=True
+Monster_C.Variable=True
+Monster_C.Sockets=True
+Monster_C.ComponentReplication=True
+Monster_C.Events=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
@@ -1568,7 +1574,7 @@ MRUItem2=/Game/0PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem3=/Game/PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LoadErrors
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,
@@ -1664,8 +1670,8 @@ SpotLightComponent="\"Object.Light.LightColor\" "
 PointLightComponent="\"Object.Light.LightColor\" "
 LightComponent="\"Object.Light.LightColor\" "
 LightComponentBase="\"Object.Light.LightColor\" "
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.Shape.BoxExtent\" "
+ActorComponent="\"Object.Shape.BoxExtent\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule=
@@ -1688,6 +1694,9 @@ ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius\" \"Object.Lo
 ParticleModuleLocationBase="\"Object.Location.StartRadius\" \"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleBeamModifier="\"Object.Position.Position.Distribution\" \"Object.Tangent.Tangent.Distribution\" \"Object.Strength.Strength.Distribution\" "
 ParticleModuleBeamBase="\"Object.Position.Position.Distribution\" \"Object.Tangent.Tangent.Distribution\" \"Object.Strength.Strength.Distribution\" "
+BoxComponent="\"Object.Shape.BoxExtent\" "
+ShapeComponent="\"Object.Shape.BoxExtent\" "
+PrimitiveComponent="\"Object.Shape.BoxExtent\" "
 
 [/Script/EditorStyle.EditorStyleSettings]
 SelectionColor=(R=0.728000,G=0.364000,B=0.003000,A=1.000000)
@@ -1724,17 +1733,18 @@ bShowMobileStats=False
 /Game/Materials/BaseMaterial2.BaseMaterial2=0
 /Game/Blueprints/FirstPersonCharacter.FirstPersonCharacter=0
 /Game/Blueprints/GameInstanceController.GameInstanceController=0
+/Game/Characters/Monster/Blueprint/Monster.Monster=0
 
 [MaterialEditor]
 PrimType=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Characters/Monster/Blueprint/Monster.Monster;
 RecentlyPlaced=/Game/Escenario.Escenario;
 RecentlyPlaced=/Game/Materials/BaseMaterial2.BaseMaterial2;
 RecentlyPlaced=/Game/Materials/BaseMaterial1.BaseMaterial1;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/FirstPersonCharacter.FirstPersonCharacter;
-RecentlyPlaced=/Game/Characters/Monster/Blueprint/Monster.Monster;
 RecentlyPlaced=/Game/0PLANTILLA/FirstPerson/Character/Mesh/SK_Mannequin_Arms_Skeleton.SK_Mannequin_Arms_Skeleton;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/Test/test_trail.test_trail;
@@ -1784,6 +1794,7 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 FbxImportUI.Miscellaneous=True
 StaticMeshActor.StaticMesh=False
+BoxComponent.Shape=True
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
