Reticula de vision
Añadida reticula blanca al HUD para ayudar al jugador a saber donde esta mirando

--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -97,7 +97,7 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Levels/testManu
+LastLevel=/Game/0PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -996,15 +996,15 @@ SpeedModifier_BTT_C.Description=True
 SpeedModifier_BTT_C.Task=True
 FileMediaSource.File=True
 FileMediaSource.Platforms=True
+FirstPersonGameMode_C.Tick=True
+FirstPersonGameMode_C.Classes=True
+FirstPersonGameMode_C.Game=True
+FirstPersonGameMode_C.GameMode=True
+FirstPersonGameMode_C.HLOD=False
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Characters/Monster/AI/Monster_BT.Monster_BT
-OpenAssetsAtExit=/Game/Characters/Monster/AI/MonsterBT_Blackboard.MonsterBT_Blackboard
-OpenAssetsAtExit=/Game/Characters/Monster/AI/ThinkMonster_BTS.ThinkMonster_BTS
-OpenAssetsAtExit=/Game/Characters/Monster/Blueprint/Monster.Monster
-OpenAssetsAtExit=/Game/Characters/Monster/AI/SpeedModifier_BTT.SpeedModifier_BTT
 
 [RootWindow]
 ScreenPosition=X=215.000 Y=16.000
@@ -1778,6 +1778,7 @@ bShowMobileStats=False
 /Game/Characters/Monster/Blueprint/Monster.Monster=0
 /Game/Characters/Monster/AI/BTTask_BlueprintBase_New.BTTask_BlueprintBase_New=0
 /Game/Characters/Monster/AI/VelocityModifier_BTT.VelocityModifier_BTT=0
+/Game/Blueprints/FirstPersonGameMode.FirstPersonGameMode=0
 
 [MaterialEditor]
 PrimType=1
