--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -59,6 +59,7 @@ None=======
 None=======
 None=======
 None=======
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -86,7 +87,7 @@ CurrentPosGridSize=0
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game/Sounds
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
-ContentBrowserTab1.SelectedPaths=/Game/Characters/Monster/AI
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 None=======
 None=======
@@ -1503,6 +1504,16 @@ PauseMenu_C.Render Transform=True
 PauseMenu_C.Performance=True
 PauseMenu_C.Clipping=True
 PauseMenu_C.Navigation=True
+Widget.Behavior=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2114,7 +2125,7 @@ HierarchicalLODOutliner.TimeStamp=2017.11.06-10.15.00
 HierarchicalLODOutliner.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2017.11.06-10.13.25
 BlueprintGraph.LastCompileMethod=External
-HierarchicalLODUtilities.TimeStamp=2017.11.06-09.03.44
+HierarchicalLODUtilities.TimeStamp=2017.11.06-10.15.02
 HierarchicalLODUtilities.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2017.11.06-10.16.15
 MovieSceneCapture.LastCompileMethod=External
@@ -2133,13 +2144,14 @@ SequencerWidgets.LastCompileMethod=External
 
 [MRU]
 MRUItem0=/Game/Levels/testManu
-MRUItem1=/Game/0PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem2=/Game/Levels/testDani2
-MRUItem3=/Game/Levels/testDani
-MRUItem4=/Game/StarterContent/Maps/StarterMap
-MRUItem5=/Game/Levels/testGrego
-MRUItem6=/Game/Levels/Escenario
-MRUItem7=/Game/PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem1=/Game/Levels/Game
+MRUItem2=/Game/0PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem3=/Game/Levels/testDani2
+MRUItem4=/Game/Levels/testDani
+MRUItem5=/Game/StarterContent/Maps/StarterMap
+MRUItem6=/Game/Levels/testGrego
+MRUItem7=/Game/Levels/Escenario
+MRUItem8=/Game/PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -2208,7 +2220,7 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSett
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,ParticleModuleColorOverLife.Color.Constant,
 ParticleModuleColor=ParticleModuleColor.Color.Distribution,
 Monster_C=Monster_C.Collision.Collision,
-K2Node_VariableGet=Monster_C.Collision.Collision,
+K2Node_VariableGet=
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 BoxComponent=BoxComponent.Collision.Collision,
 None=======
@@ -2216,7 +2228,7 @@ None=======
 BoolProperty=
 BoolProperty=Monster_C.Collision.Collision,
 K2Node_VariableSet=
-ObjectProperty=Monster_C.Collision.Collision,
+ObjectProperty=
 
 [DetailPropertyExpansion]
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -2330,13 +2342,15 @@ BlackboardData="\"Object.Blackboard\" "
 DataAsset="\"Object.Blackboard\" "
 GeomModifier_Extrude="\"Object.Settings\" "
 LightmassPrimitiveSettingsObject="\"Object.LightmassSettings\" "
-TextBlock="\"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget=
-Visual=
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object.Render Transform.RenderTransform\" "
+CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 
 [/Script/EditorStyle.EditorStyleSettings]
 SelectionColor=(R=0.728000,G=0.364000,B=0.003000,A=1.000000)
@@ -2412,6 +2426,7 @@ None=======
 /Game/Materials/Cloud.Cloud=0
 /Game/Test/Trail_Eye.Trail_Eye=0
 /Game/StarterContent/Particles/P_Smoke.P_Smoke=0
+/Game/HUDs/GameOver.GameOver=0
 
 [MaterialEditor]
 PrimType=1
@@ -2430,6 +2445,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Characters/Monster/Blueprint/Monster.Monster;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Game/Materials/Cloud.Cloud;
@@ -2449,21 +2465,6 @@ RecentlyPlaced=/Game/Blueprints/ItemPosition.ItemPosition;
 RecentlyPlaced=/Game/Blueprints/Item.Item;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Materials/BaseMaterial.BaseMaterial;
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Pine.M_Wood_Pine;
-RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Rough.M_CobbleStone_Rough;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Marble_Polished.M_Rock_Marble_Polished;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_Beveled.M_Brick_Clay_Beveled;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished;
-RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Worn.M_Wood_Floor_Walnut_Worn;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Oak.M_Wood_Oak;
-RecentlyPlaced=/Game/Characters/Monster/Blueprint/Monster.Monster;
-RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Game/Escenario.Escenario;
-RecentlyPlaced=/Game/Materials/BaseMaterial2.BaseMaterial2;
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
@@ -2627,6 +2628,7 @@ Panel=False
 Primitive=False
 Special Effects=False
 Uncategorized=False
+User Created=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
