Importados modelos de Johny

--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -120,7 +120,7 @@ LastLevel=/Game/Levels/testManu
 LastLevel=/Game/Levels/testDani
 LastLevel=/Game/Levels/testManu
 LastLevel=/Game/Levels/testGrego
-LastLevel=/Game/Levels/testDani
+LastLevel=/Game/Levels/testGrego
 None=======
 None=======
 None=======
@@ -1517,9 +1517,12 @@ CanvasPanel.Navigation=True
 MaterialExpressionScalarParameter.General=True
 MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
 MaterialExpressionScalarParameter.MaterialExpression=True
+FbxImportUI.Animation=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 None=======
 None=======
@@ -2146,19 +2149,19 @@ SequencerWidgets.TimeStamp=2017.11.06-10.17.42
 SequencerWidgets.LastCompileMethod=External
 
 [MRU]
-MRUItem0=/Game/Levels/testDani
-MRUItem1=/Game/Levels/testManu
-MRUItem2=/Game/Levels/Game
-MRUItem3=/Game/0PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem4=/Game/Levels/testDani2
-MRUItem5=/Game/StarterContent/Maps/StarterMap
-MRUItem6=/Game/Levels/testGrego
+MRUItem0=/Game/Levels/testGrego
+MRUItem1=/Game/Levels/testDani
+MRUItem2=/Game/Levels/testManu
+MRUItem3=/Game/Levels/Game
+MRUItem4=/Game/0PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem5=/Game/Levels/testDani2
+MRUItem6=/Game/StarterContent/Maps/StarterMap
 MRUItem7=/Game/Levels/Escenario
 MRUItem8=/Game/PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=PIE
+LastLogListing=FBXImport
 None=======
 MRUItem1=/Game/Levels/testManu
 MRUItem2=/Game/Levels/testGrego
@@ -2232,6 +2235,7 @@ BoolProperty=
 BoolProperty=Monster_C.Collision.Collision,
 K2Node_VariableSet=
 ObjectProperty=
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.General.BasePropertyOverrideGroup,
 
 [DetailPropertyExpansion]
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -2354,6 +2358,7 @@ ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
 Image="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
+MaterialEditorInstanceConstant="\"Object.LightmassSettings\" \"Object.LightmassSettings.CastShadowAsMasked\" "
 
 [/Script/EditorStyle.EditorStyleSettings]
 SelectionColor=(R=0.728000,G=0.364000,B=0.003000,A=1.000000)
@@ -2431,6 +2436,17 @@ None=======
 /Game/StarterContent/Particles/P_Smoke.P_Smoke=0
 /Game/HUDs/GameOver.GameOver=0
 /Game/Materials/Goma.Goma=0
+/Game/StaticMeshes/Blanco.Blanco=0
+/Game/Materials/blancobidon.blancobidon=0
+/Game/Materials/naranjabidon.naranjabidon=0
+/Game/Materials/negrobidon.negrobidon=0
+/Game/StaticMeshes/BidonL.BidonL=0
+/Game/Materials/Generador/plasticoRojo.plasticoRojo=0
+/Game/Materials/Generador/generadorBotones.generadorBotones=0
+/Game/Materials/Generador/metalCromado.metalCromado=0
+/Game/Materials/Generador/metalNegro.metalNegro=0
+/Game/Materials/Generador/plasticoNegro.plasticoNegro=0
+/Game/StaticMeshes/GeneradorL.GeneradorL=0
 
 [MaterialEditor]
 PrimType=1
@@ -2526,6 +2542,8 @@ FirstPersonGameMode_C.Tick=True
 StaticMeshActor.Collision=False
 Monster_C.Shape=False
 Brush.Geometry=False
+FbxImportUI.Mesh=False
+FbxImportUI.Material=True
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
@@ -2536,6 +2554,7 @@ LodDistance4=0.000000
 LodDistance5=0.000000
 LodDistance6=0.000000
 LodDistance7=0.000000
+bImportTextures=False
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -2585,7 +2604,7 @@ bConvertSceneUnit=False
 
 [FBX_Import_UI_Option_FbxTextureImportData]
 bInvertNormalMaps=False
-MaterialSearchLocation=Local
+MaterialSearchLocation=AllAssets
 BaseMaterialName=/Game/0PLANTILLA/Geometry/Meshes/CubeMaterial.CubeMaterial
 BaseColorName=
 BaseDiffuseTextureName=
@@ -2640,5 +2659,11 @@ PreviewWidth=1280
 PreviewHeight=720
 PreviewAspectRatio=16:9
 None=======
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
+bWantsMobileStats=False
 
 
