--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -87,7 +87,7 @@ CurrentPosGridSize=0
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game/Sounds
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
-ContentBrowserTab1.SelectedPaths=/Game/Materials
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 None=======
 None=======
@@ -1517,6 +1517,9 @@ CanvasPanel.Navigation=True
 MaterialExpressionScalarParameter.General=True
 MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
 MaterialExpressionScalarParameter.MaterialExpression=True
+Actor.Surface Materials=True
+Actor.Geometry=True
+Actor.Surface Properties=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2237,7 +2240,7 @@ ObjectProperty=
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 DeveloperSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[0].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[1].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[2].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[3].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[4].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[5].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[6].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[7].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[8].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[9].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[10].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[11].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" \"Object.Designer.DebugResolutions.DebugResolutions[12].Color\" "
 Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" "
-Object=
+Object="\"Object.Settings\" "
 None=======
 None=======
 None=======
@@ -2449,26 +2452,26 @@ None=======
 None=======
 None=======
 None=======
-RecentlyPlaced=/Game/Materials/BaseMaterial1.BaseMaterial1;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Pine.M_Wood_Pine;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Oak.M_Wood_Oak;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/StarterContent/Props/SM_GlassWindow.SM_GlassWindow;
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Materials/BaseMaterial1.BaseMaterial1;
 RecentlyPlaced=/Game/StaticMeshes/Estanteria.Estanteria;
 RecentlyPlaced=/Game/StaticMeshes/test.test;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Characters/Monster/Blueprint/Monster.Monster;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Game/Materials/Cloud.Cloud;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/Clock.Clock;
 RecentlyPlaced=/Game/StaticMeshes/ClockHand.ClockHand;
 RecentlyPlaced=/Game/StaticMeshes/ClockSphereMesh.ClockSphereMesh;
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
-RecentlyPlaced=/Game/Blueprints/testItem.testItem;
-RecentlyPlaced=/Game/Blueprints/Inventory.Inventory;
-RecentlyPlaced=/Game/Blueprints/ItemPosition.ItemPosition;
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
