--- a/TurnTheLightsOn/Config/DefaultEngine.ini
+++ b/TurnTheLightsOn/Config/DefaultEngine.ini
@@ -30,6 +30,9 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/Engine.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -70,5 +73,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
