--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -54,7 +54,7 @@ NewWindowPosition=(X=155,Y=53)
 NewWindowPosition=(X=1016,Y=105)
 NewWindowPosition=(X=155,Y=53)
 NewWindowPosition=(X=315,Y=143)
-NewWindowPosition=(X=315,Y=143)
+NewWindowPosition=(X=155,Y=53)
 None=======
 None=======
 None=======
@@ -88,11 +88,9 @@ ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game/Sounds
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game
-<<<<<<< Updated upstream
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
-=======
 ContentBrowserTab1.SelectedPaths=/Game/StaticMeshes
->>>>>>> Stashed changes
+None=======
 None=======
 None=======
 None=======
@@ -127,11 +125,9 @@ LastLevel=/Game/Levels/testDani
 LastLevel=/Game/Levels/testManu
 LastLevel=/Game/Levels/testGrego
 LastLevel=/Game/Levels/testGrego
-<<<<<<< Updated upstream
 LastLevel=/Game/Levels/testGrego
-=======
-LastLevel=/Game/0PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
->>>>>>> Stashed changes
+LastLevel=/Game/Levels/Game
+None=======
 None=======
 None=======
 None=======
@@ -402,6 +398,7 @@ EditorLoadingSavingSettings.SourceControl=True
 EditorLoadingSavingSettings.SourceControl=True
 SourceCodeAccessSettings.Accessor=True
 SourceCodeAccessSettings.Accessor=True
+None=======
 None=======
 None=======
 None=======
@@ -1555,7 +1552,6 @@ SoundCue.Concurrency=True
 SoundCue.Effects=True
 SoundCue.Info=True
 SoundNodeWavePlayer.WavePlayer=True
-<<<<<<< Updated upstream
 reja_C.Tick=True
 reja_C.Default=True
 reja_C.Rendering=True
@@ -1577,11 +1573,41 @@ palanca_C.Replication=True
 palanca_C.Input=True
 palanca_C.Actor=True
 palanca_C.TransformCommon=True
-=======
->>>>>>> Stashed changes
+triggerItem_C.Default=True
+Silla_BP_C.Tick=True
+Silla_BP_C.Rendering=True
+Silla_BP_C.Replication=True
+Silla_BP_C.Input=True
+Silla_BP_C.Actor=True
+Silla_BP_C.TransformCommon=True
+SceneComponent.Physics=False
+Actor.Rendering=True
+BP_Generador_C.Tick=True
+BP_Generador_C.Actor=True
+BP_Generador_C.Rendering=True
+BP_Generador_C.Replication=True
+BP_Generador_C.Input=True
+BP_Generador_C.TransformCommon=True
+BP_Generador_C.StaticMesh=True
+BP_Generador_C.Materials=True
+BP_Generador_C.Physics=True
+BP_Generador_C.Collision=True
+BP_Generador_C.Lighting=True
+BP_Generador_C.Tags=True
+BP_Generador_C.Cooking=True
+BP_PuertasHierro_C.Tick=True
+BP_PuertasHierro_C.Rendering=True
+BP_PuertasHierro_C.Replication=True
+BP_PuertasHierro_C.Input=True
+BP_PuertasHierro_C.Actor=True
+BP_PuertasHierro_C.TransformCommon=True
+BP_Generador_C.ComponentTick=True
+BP_Generador_C.ComponentReplication=True
+BP_Generador_C.Variable=True
+BP_PuertasHierro_C.Default=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 None=======
 None=======
@@ -1597,10 +1623,8 @@ None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Blueprints/Items/reja.reja
-OpenAssetsAtExit=/Game/Blueprints/triggerItem.triggerItem
-OpenAssetsAtExit=/Game/Blueprints/Items/palanca.palanca
-OpenAssetsAtExit=/Game/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/Blueprints/BP_Generador.BP_Generador
+OpenAssetsAtExit=/Game/Blueprints/BP_PuertasHierro.BP_PuertasHierro
 
 [RootWindow]
 ScreenPosition=X=215.000 Y=16.000
@@ -2212,12 +2236,11 @@ SequencerWidgets.TimeStamp=2017.11.06-10.17.42
 SequencerWidgets.LastCompileMethod=External
 
 [MRU]
-MRUItem0=/Game/Levels/testGrego
-<<<<<<< Updated upstream
-MRUItem1=/Game/Levels/MainMenu
-MRUItem2=/Game/Levels/testManu
-MRUItem3=/Game/Levels/testDani
-MRUItem4=/Game/Levels/Game
+MRUItem0=/Game/Levels/Game
+MRUItem1=/Game/Levels/testGrego
+MRUItem2=/Game/Levels/MainMenu
+MRUItem3=/Game/Levels/testManu
+MRUItem4=/Game/Levels/testDani
 MRUItem5=/Game/0PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem6=/Game/Levels/testDani2
 MRUItem7=/Game/StarterContent/Maps/StarterMap
@@ -2225,37 +2248,34 @@ MRUItem8=/Game/Levels/Escenario
 MRUItem9=/Game/PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [MessageLog]
-=======
+None=======
+None=======
+None=======
+None=======
 MRUItem0=/Game/Levels/MainMenu
 MRUItem1=/Game/Levels/testDani
 MRUItem1=/Game/Levels/testManu
+MRUItem1=/Game/Levels/testManu
 MRUItem2=/Game/Levels/testManu
 MRUItem2=/Game/Levels/testDani
-None=======
+MRUItem2=/Game/Levels/testGrego
 MRUItem3=/Game/Levels/Game
+MRUItem3=/Game/0PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem4=/Game/0PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem4=/Game/PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem5=/Game/Levels/testDani2
 MRUItem6=/Game/StarterContent/Maps/StarterMap
 MRUItem7=/Game/Levels/Escenario
-MRUItem8=/Game/PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
-
-[MessageLog]
-LastLogListing=LightingResults
-LastLogListing=FBXImport
->>>>>>> Stashed changes
-LastLogListing=LightingResults
-LastLogListing=FBXImport
-LastLogListing=LightingResults
-LastLogListing=AssetReimport
-None=======
-None=======
 MRUItem7=/Game/Levels/testGrego
+MRUItem8=/Game/PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem8=/Game/Levels/Escenario
+LastLogListing=LightingResults
+LastLogListing=FBXImport
+LastLogListing=LightingResults
+LastLogListing=FBXImport
+LastLogListing=LightingResults
+LastLogListing=LightingResults
 MRUItem9=/Game/PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem1=/Game/Levels/testManu
-MRUItem2=/Game/Levels/testGrego
-MRUItem3=/Game/0PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem4=/Game/PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Action,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Inventory,
@@ -2330,7 +2350,7 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.General.BaseProper
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 DeveloperSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[0].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[1].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[2].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[3].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[4].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[5].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[6].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[7].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[8].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[9].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[10].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[11].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" \"Object.Designer.DebugResolutions.DebugResolutions[12].Color\" "
 Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" "
-Object="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+Object=
 None=======
 None=======
 None=======
@@ -2377,9 +2397,9 @@ PointLightComponent="\"Object.Light.LightColor\" "
 LightComponent="\"Object.Light.LightColor\" "
 LightComponentBase="\"Object.Light.LightColor\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+SceneComponent=
 ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ActorComponent=
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
@@ -2411,15 +2431,15 @@ GeomModifier_Pen="\"Object.Settings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 BoxComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 BoxComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-BoxComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+BoxComponent="\"Object.Shape.BoxExtent\" "
 ShapeComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 ShapeComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-ShapeComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ShapeComponent="\"Object.Shape.BoxExtent\" "
 PrimitiveComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-PrimitiveComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+PrimitiveComponent=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Monster_C=
 Character=
@@ -2448,6 +2468,9 @@ PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.N
 Image="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 MaterialEditorInstanceConstant="\"Object.LightmassSettings\" \"Object.LightmassSettings.CastShadowAsMasked\" "
+StaticMesh=
+PointLight="\"Object.Actor.Tags\" "
+Light="\"Object.Actor.Tags\" "
 
 [/Script/EditorStyle.EditorStyleSettings]
 SelectionColor=(R=0.728000,G=0.364000,B=0.003000,A=1.000000)
@@ -2540,6 +2563,17 @@ None=======
 /Game/Levels/MainMenu.MainMenu:PersistentLevel.MainMenu=0
 /Game/Sounds/Demon_Girls_Mockingbir-Hello-1365708396.Demon_Girls_Mockingbir-Hello-1365708396=0
 /Game/Sounds/Demon_Girls_Mockingbir-Hello_Cue.Demon_Girls_Mockingbir-Hello_Cue=0
+/Game/Blueprints/Items/palanca.palanca=0
+/Game/Blueprints/triggerItem.triggerItem=0
+/Game/Blueprints/Items/reja.reja=0
+/Game/StaticMeshes/Pelota.Pelota=0
+/Game/StaticMeshes/Estanteria.Estanteria=0
+/Game/StaticMeshes/Silla_final.Silla_final=0
+/Game/StaticMeshes/Escritorio/Escritorio.Escritorio=0
+/Game/StaticMeshes/Silla.Silla=0
+/Game/StaticMeshes/Silla_BP.Silla_BP=0
+/Game/Blueprints/BP_Generador.BP_Generador=0
+/Game/Blueprints/BP_PuertasHierro.BP_PuertasHierro=0
 
 [MaterialEditor]
 PrimType=1
@@ -2558,26 +2592,26 @@ None=======
 None=======
 None=======
 None=======
-RecentlyPlaced=/Game/Blueprints/Items/palanca.palanca;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Pine.M_Wood_Pine;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Oak.M_Wood_Oak;
+RecentlyPlaced=/Game/Blueprints/ItemPosition.ItemPosition;
+RecentlyPlaced=/Game/Blueprints/BP_PuertasHierro.BP_PuertasHierro;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Steel.M_Metal_Steel;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Rust.M_Metal_Rust;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Tiles.M_Concrete_Tiles;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Panel.M_Tech_Panel;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Burnished_Steel.M_Metal_Burnished_Steel;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/StarterContent/Props/SM_GlassWindow.SM_GlassWindow;
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Materials/BaseMaterial1.BaseMaterial1;
-RecentlyPlaced=/Game/StaticMeshes/Estanteria.Estanteria;
-RecentlyPlaced=/Game/StaticMeshes/test.test;
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Game/Characters/Monster/Blueprint/Monster.Monster;
-RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
-RecentlyPlaced=/Game/Materials/Cloud.Cloud;
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
-RecentlyPlaced=/Game/Blueprints/Clock.Clock;
-RecentlyPlaced=/Game/StaticMeshes/ClockHand.ClockHand;
-RecentlyPlaced=/Game/StaticMeshes/ClockSphereMesh.ClockSphereMesh;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Game/Materials/BaseMaterial.BaseMaterial;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Bush.SM_Bush;
+RecentlyPlaced=/Game/StarterContent/Props/SM_MatPreviewMesh_02.SM_MatPreviewMesh_02;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Statue.SM_Statue;
+RecentlyPlaced=/Game/StaticMeshes/Matraz.Matraz;
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
@@ -2639,6 +2673,8 @@ Brush.Geometry=False
 FbxImportUI.Mesh=False
 FbxImportUI.Material=True
 FileMediaSource.File=True
+StaticMesh.Collision=False
+PointLight.Actor=True
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
