--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1605,6 +1605,41 @@ BP_Generador_C.ComponentTick=True
 BP_Generador_C.ComponentReplication=True
 BP_Generador_C.Variable=True
 BP_PuertasHierro_C.Default=True
+generadorUnlockable_C.Tick=True
+generadorUnlockable_C.Default=True
+generadorUnlockable_C.Rendering=True
+generadorUnlockable_C.Replication=True
+generadorUnlockable_C.Input=True
+generadorUnlockable_C.Actor=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
+BP_Generador_C.Default=True
+generadorUnlockable_C.TransformCommon=True
+bidonItem_C.TransformCommon=True
+bidonItem_C.Default=True
+bidonItem_C.Rendering=True
+bidonItem_C.Input=True
+bidonItem_C.Actor=True
+bidonItem_C.Tick=True
+bidonItem_C.Replication=True
+unlockable_C.Tick=True
+unlockable_C.Default=True
+unlockable_C.Rendering=True
+unlockable_C.Replication=True
+unlockable_C.Input=True
+unlockable_C.Actor=True
+llaveItem_C.TransformCommon=True
+llaveItem_C.Default=True
+llaveItem_C.Rendering=True
+llaveItem_C.Input=True
+llaveItem_C.Actor=True
+candadoUnlockable_C.TransformCommon=True
+candadoUnlockable_C.Rendering=True
+candadoUnlockable_C.Input=True
+candadoUnlockable_C.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -1623,8 +1658,7 @@ None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Blueprints/BP_Generador.BP_Generador
-OpenAssetsAtExit=/Game/Blueprints/BP_PuertasHierro.BP_PuertasHierro
+OpenAssetsAtExit=/Game/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [RootWindow]
 ScreenPosition=X=215.000 Y=16.000
@@ -2274,7 +2308,7 @@ LastLogListing=FBXImport
 LastLogListing=LightingResults
 LastLogListing=FBXImport
 LastLogListing=LightingResults
-LastLogListing=LightingResults
+LastLogListing=PIE
 MRUItem9=/Game/PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [DetailCustomWidgetExpansion]
@@ -2350,7 +2384,7 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.General.BaseProper
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 DeveloperSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[0].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[1].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[2].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[3].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[4].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[5].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[6].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[7].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[8].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[9].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[10].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[11].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" \"Object.Designer.DebugResolutions.DebugResolutions[12].Color\" "
 Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" "
-Object=
+Object="\"Object.LightmassSettings\" "
 None=======
 None=======
 None=======
@@ -2574,6 +2608,10 @@ None=======
 /Game/StaticMeshes/Silla_BP.Silla_BP=0
 /Game/Blueprints/BP_Generador.BP_Generador=0
 /Game/Blueprints/BP_PuertasHierro.BP_PuertasHierro=0
+/Game/Blueprints/Items/BP_Generador.BP_Generador=0
+/Game/Blueprints/Items/generadorUnlockable.generadorUnlockable=0
+/Game/Blueprints/Items/bidonItem.bidonItem=0
+/Game/Blueprints/unlockable.unlockable=0
 
 [MaterialEditor]
 PrimType=1
@@ -2592,6 +2630,11 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Blueprints/Items/candadoUnlockable.candadoUnlockable;
+RecentlyPlaced=/Game/Blueprints/Items/llaveItem.llaveItem;
+RecentlyPlaced=/Game/Blueprints/Inventory.Inventory;
+RecentlyPlaced=/Game/Blueprints/Items/bidonItem.bidonItem;
+RecentlyPlaced=/Game/Blueprints/Items/generadorUnlockable.generadorUnlockable;
 RecentlyPlaced=/Game/Blueprints/ItemPosition.ItemPosition;
 RecentlyPlaced=/Game/Blueprints/BP_PuertasHierro.BP_PuertasHierro;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Steel.M_Metal_Steel;
@@ -2607,11 +2650,6 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Materials/BaseMaterial.BaseMaterial;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut;
-RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
-RecentlyPlaced=/Game/StarterContent/Props/SM_Bush.SM_Bush;
-RecentlyPlaced=/Game/StarterContent/Props/SM_MatPreviewMesh_02.SM_MatPreviewMesh_02;
-RecentlyPlaced=/Game/StarterContent/Props/SM_Statue.SM_Statue;
-RecentlyPlaced=/Game/StaticMeshes/Matraz.Matraz;
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
@@ -2675,6 +2713,7 @@ FbxImportUI.Material=True
 FileMediaSource.File=True
 StaticMesh.Collision=False
 PointLight.Actor=True
+Blueprint.ClassOptions=False
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
@@ -2756,6 +2795,7 @@ OnlyBuildVisibility=False
 ChangeVariableType_Warning=False
 None=======
 ExtrudeCoordsWarning=False
+Warning_ReparentTitle=False
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
