--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,7 +89,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Sounds
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 None=======
 None=======
@@ -1651,9 +1651,31 @@ Light.DistanceFieldShadows=True
 Light.Tags=True
 Light.Cooking=True
 Light.Actor=True
+BP_EscritorioCajon_C.Tick=True
+BP_EscritorioCajon_C.Rendering=True
+BP_EscritorioCajon_C.Replication=True
+BP_EscritorioCajon_C.Input=True
+BP_EscritorioCajon_C.Actor=True
+MatineeActor.TransformCommon=True
+MatineeActor.MatineeActor=True
+MatineeActor.Play=True
+MatineeActor.Rewind=True
+MatineeActor.Cinematic=True
+MatineeActor.Rendering=True
+MatineeActor.Actor=True
+InterpGroup.InterpGroup=True
+InterpTrackMove.InterpTrackMove=True
+InterpTrackMove.InterpTrack=True
+Game_C.Tick=True
+Game_C.Replication=True
+Game_C.Input=True
+Game_C.Actor=True
+candadoUnlockable_C.Tick=True
+candadoUnlockable_C.Default=True
+candadoUnlockable_C.Replication=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 None=======
 None=======
@@ -1669,7 +1691,8 @@ None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Blueprints/BP_PuertasHierro.BP_PuertasHierro
+OpenAssetsAtExit=/Game/Levels/Game.Game:PersistentLevel.Game
+OpenAssetsAtExit=/Game/Blueprints/Items/candadoUnlockable.candadoUnlockable
 
 [RootWindow]
 ScreenPosition=X=215.000 Y=16.000
@@ -2275,8 +2298,8 @@ DistCurveEditor.TimeStamp=2017.11.06-09.03.42
 DistCurveEditor.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2017.11.06-09.03.45
 MaterialEditor.LastCompileMethod=Unknown
-StaticMeshEditor.TimeStamp=2017.11.02-12.29.45
-StaticMeshEditor.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2017.11.06-09.03.47
+StaticMeshEditor.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2017.11.06-10.17.42
 SequencerWidgets.LastCompileMethod=External
 
@@ -2395,7 +2418,7 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.General.BaseProper
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 DeveloperSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[0].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[1].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[2].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[3].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[4].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[5].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[6].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[7].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[8].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[9].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[10].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[11].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" \"Object.Designer.DebugResolutions.DebugResolutions[12].Color\" "
 Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" "
-Object="\"Object.Shape.BoxExtent\" "
+Object="\"Object.LightmassSettings\" "
 None=======
 None=======
 None=======
@@ -2624,6 +2647,8 @@ None=======
 /Game/Blueprints/Items/generadorUnlockable.generadorUnlockable=0
 /Game/Blueprints/Items/bidonItem.bidonItem=0
 /Game/Blueprints/unlockable.unlockable=0
+/Game/Blueprints/BP_EscritorioCajon.BP_EscritorioCajon=0
+/Game/Blueprints/Items/candadoUnlockable.candadoUnlockable=1
 
 [MaterialEditor]
 PrimType=1
@@ -2642,10 +2667,11 @@ None=======
 None=======
 None=======
 None=======
-RecentlyPlaced=/Game/Blueprints/Items/candadoUnlockable.candadoUnlockable;
 RecentlyPlaced=/Game/Blueprints/Items/llaveItem.llaveItem;
-RecentlyPlaced=/Game/Blueprints/Inventory.Inventory;
+RecentlyPlaced=/Game/Blueprints/Items/candadoUnlockable.candadoUnlockable;
 RecentlyPlaced=/Game/Blueprints/Items/bidonItem.bidonItem;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Blueprints/Inventory.Inventory;
 RecentlyPlaced=/Game/Blueprints/Items/generadorUnlockable.generadorUnlockable;
 RecentlyPlaced=/Game/Blueprints/ItemPosition.ItemPosition;
 RecentlyPlaced=/Game/Blueprints/BP_PuertasHierro.BP_PuertasHierro;
@@ -2657,7 +2683,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Panel.M_Tech_Panel;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Burnished_Steel.M_Metal_Burnished_Steel;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Materials/BaseMaterial.BaseMaterial;
@@ -2809,6 +2834,7 @@ ChangeVariableType_Warning=False
 None=======
 ExtrudeCoordsWarning=False
 Warning_ReparentTitle=False
+MatineeToLevelSequence=False
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -2849,5 +2875,14 @@ bShowGrid=False
 bDrawGrid=False
 PrimType=1
 bWantsMobileStats=False
+
+[Matinee]
+SelectedSnapMode=3
+SnapTimeToFrames=False
+FixedTimeStepPlayback=False
+PreferFrameNumbers=True
+SnapEnabled=False
+ShowTimeCursorPosForAllKeys=False
+InitialInterpMode2=5
 
 
