--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1691,8 +1691,6 @@ None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Levels/Game.Game:PersistentLevel.Game
-OpenAssetsAtExit=/Game/Blueprints/Items/candadoUnlockable.candadoUnlockable
 
 [RootWindow]
 ScreenPosition=X=215.000 Y=16.000
@@ -2648,7 +2646,8 @@ None=======
 /Game/Blueprints/Items/bidonItem.bidonItem=0
 /Game/Blueprints/unlockable.unlockable=0
 /Game/Blueprints/BP_EscritorioCajon.BP_EscritorioCajon=0
-/Game/Blueprints/Items/candadoUnlockable.candadoUnlockable=1
+/Game/Blueprints/Items/candadoUnlockable.candadoUnlockable=0
+/Game/Levels/Game.Game:PersistentLevel.Game=0
 
 [MaterialEditor]
 PrimType=1
