--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,7 +89,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Sounds
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Sounds/Nuevo
 None=======
 None=======
 None=======
@@ -126,7 +126,7 @@ LastLevel=/Game/Levels/testManu
 LastLevel=/Game/Levels/testGrego
 LastLevel=/Game/Levels/testGrego
 LastLevel=/Game/Levels/testGrego
-LastLevel=/Game/Levels/Game
+LastLevel=/Game/0PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
 None=======
 None=======
 None=======
@@ -1675,7 +1675,7 @@ candadoUnlockable_C.Default=True
 candadoUnlockable_C.Replication=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 None=======
 None=======
