Sonidos y corrección bugs

--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -126,7 +126,7 @@ LastLevel=/Game/Levels/testManu
 LastLevel=/Game/Levels/testGrego
 LastLevel=/Game/Levels/testGrego
 LastLevel=/Game/Levels/testGrego
-LastLevel=/Game/0PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/Levels/Game
 None=======
 None=======
 None=======
@@ -1673,6 +1673,8 @@ Game_C.Actor=True
 candadoUnlockable_C.Tick=True
 candadoUnlockable_C.Default=True
 candadoUnlockable_C.Replication=True
+llaveItem_C.Tick=True
+llaveItem_C.Replication=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2303,10 +2305,10 @@ SequencerWidgets.LastCompileMethod=External
 
 [MRU]
 MRUItem0=/Game/Levels/Game
-MRUItem1=/Game/Levels/testGrego
-MRUItem2=/Game/Levels/MainMenu
-MRUItem3=/Game/Levels/testManu
-MRUItem4=/Game/Levels/testDani
+MRUItem1=/Game/Levels/testDani
+MRUItem2=/Game/Levels/testGrego
+MRUItem3=/Game/Levels/MainMenu
+MRUItem4=/Game/Levels/testManu
 MRUItem5=/Game/0PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem6=/Game/Levels/testDani2
 MRUItem7=/Game/StarterContent/Maps/StarterMap
@@ -2463,9 +2465,9 @@ PointLightComponent="\"Object.Light.LightColor\" "
 LightComponent="\"Object.Light.LightColor\" "
 LightComponentBase="\"Object.Light.LightColor\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent="\"Object.Shape.BoxExtent\" "
+SceneComponent=
 ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object.Shape.BoxExtent\" "
+ActorComponent=
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
@@ -2505,7 +2507,7 @@ ShapeComponent="\"Object.Shape.BoxExtent\" "
 PrimitiveComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-PrimitiveComponent="\"Object.Shape.BoxExtent\" "
+PrimitiveComponent=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Monster_C=
 Character=
@@ -2534,7 +2536,7 @@ PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.N
 Image="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 MaterialEditorInstanceConstant="\"Object.LightmassSettings\" \"Object.LightmassSettings.CastShadowAsMasked\" "
-StaticMesh=
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
 PointLight="\"Object.Actor.Tags\" "
 Light="\"Object.Actor.Tags\" "
 SpotLight="\"Object.Actor.Tags\" "
@@ -2646,8 +2648,12 @@ None=======
 /Game/Blueprints/Items/bidonItem.bidonItem=0
 /Game/Blueprints/unlockable.unlockable=0
 /Game/Blueprints/BP_EscritorioCajon.BP_EscritorioCajon=0
-/Game/Blueprints/Items/candadoUnlockable.candadoUnlockable=0
+/Game/Blueprints/Items/candadoUnlockable.candadoUnlockable=1
 /Game/Levels/Game.Game:PersistentLevel.Game=0
+/Game/Blueprints/Items/llaveItem.llaveItem=0
+/Game/StaticMeshes/PuertaDer_Hierro.PuertaDer_Hierro=0
+/Game/StaticMeshes/PuertaIzq_Hierro.PuertaIzq_Hierro=0
+/Game/Sounds/Nuevo/Ambient_Sounds_Cue.Ambient_Sounds_Cue=0
 
 [MaterialEditor]
 PrimType=1
