--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,7 +89,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Sounds
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Characters/Monster/AI
 None=======
 None=======
 None=======
@@ -126,7 +126,7 @@ LastLevel=/Game/Levels/testManu
 LastLevel=/Game/Levels/testGrego
 LastLevel=/Game/Levels/testGrego
 LastLevel=/Game/Levels/testGrego
-LastLevel=/Game/Levels/testManu
+LastLevel=/Game/Levels/Game
 None=======
 None=======
 None=======
@@ -1688,6 +1688,7 @@ MainMenuGM_C.Tick=True
 MainMenuGM_C.Classes=True
 MainMenuGM_C.Game=True
 MainMenuGM_C.GameMode=True
+Actor.Input=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1706,8 +1707,7 @@ None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Characters/Monster/AI/MonsterReappeared_BTT.MonsterReappeared_BTT
-OpenAssetsAtExit=/Game/Characters/Monster/Blueprint/Monster.Monster
+OpenAssetsAtExit=/Game/Characters/Monster/AI/TransitionToFollow.TransitionToFollow
 
 [RootWindow]
 ScreenPosition=X=215.000 Y=16.000
@@ -2319,16 +2319,17 @@ SequencerWidgets.TimeStamp=2017.11.06-10.17.42
 SequencerWidgets.LastCompileMethod=External
 
 [MRU]
-MRUItem0=/Game/Levels/testManu
-MRUItem1=/Game/Levels/MainMenu
-MRUItem2=/Game/Levels/Game
-MRUItem3=/Game/Levels/testDani
-MRUItem4=/Game/Levels/testGrego
-MRUItem5=/Game/0PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem6=/Game/Levels/testDani2
-MRUItem7=/Game/StarterContent/Maps/StarterMap
-MRUItem8=/Game/Levels/Escenario
-MRUItem9=/Game/PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem0=/Game/Levels/Game
+MRUItem1=/Game/Levels/testManu
+MRUItem2=/Game/Levels/creditos
+MRUItem3=/Game/Levels/MainMenu
+MRUItem4=/Game/Levels/testDani
+MRUItem5=/Game/Levels/testGrego
+MRUItem6=/Game/0PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem7=/Game/Levels/testDani2
+MRUItem8=/Game/StarterContent/Maps/StarterMap
+MRUItem9=/Game/Levels/Escenario
+MRUItem10=/Game/PLANTILLA/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [MessageLog]
 None=======
@@ -2434,7 +2435,7 @@ ArrayProperty=Monster_C.Collision.Collision,
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 DeveloperSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[0].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[1].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[2].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[3].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[4].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[5].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[6].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[7].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[8].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[9].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[10].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[11].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" \"Object.Designer.DebugResolutions.DebugResolutions[12].Color\" "
 Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" "
-Object="\"Object.LightmassSettings\" "
+Object=
 None=======
 None=======
 None=======
@@ -2481,9 +2482,9 @@ PointLightComponent="\"Object.Light.LightColor\" "
 LightComponent="\"Object.Light.LightColor\" "
 LightComponentBase="\"Object.Light.LightColor\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent="\"Object.Light.LightColor\" "
+SceneComponent=
 ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object.Light.LightColor\" "
+ActorComponent=
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
@@ -2523,7 +2524,7 @@ ShapeComponent="\"Object.Shape.BoxExtent\" "
 PrimitiveComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-PrimitiveComponent="\"Object.Shape.BoxExtent\" "
+PrimitiveComponent=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Monster_C=
 Character=
@@ -2544,8 +2545,8 @@ GeomModifier_Extrude="\"Object.Settings\" "
 LightmassPrimitiveSettingsObject="\"Object.LightmassSettings\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
@@ -2673,6 +2674,7 @@ None=======
 /Game/Sounds/Nuevo/Ambient_Sounds_Cue.Ambient_Sounds_Cue=0
 /Game/Blueprints/FirstPersonCharacter_MainMenu.FirstPersonCharacter_MainMenu=0
 /Game/HUDs/MainMenu/MainMenuGM.MainMenuGM=0
+/Game/HUDs/MainMenu/MainMenu.MainMenu=0
 
 [MaterialEditor]
 PrimType=1
@@ -2691,6 +2693,9 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
+RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
+RecentlyPlaced=/Game/Characters/Monster/Blueprint/Monster.Monster;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/Materials/Paredes/suelo.suelo;
 RecentlyPlaced=/Game/Blueprints/Items/llaveItem.llaveItem;
@@ -2708,9 +2713,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Tiles.M_Concrete_Tiles;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Panel.M_Tech_Panel;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Burnished_Steel.M_Metal_Burnished_Steel;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
